css/index.css
:root {
    /* Backgrounds */
    --main-background: hsl(222, 26%, 31%);
    --screen-background: hsl(224, 36%, 15%);
    --keypad-background: hsl(223, 31%, 20%);

    /* Keys */
    --delete-key-background: hsl(225, 21%, 49%);
    --delete-key-shadow: hsl(224, 28%, 35%);
    --equals-key-background: hsl(6, 63%, 50%);
    --equals-key-shadow: hsl(6, 70%, 34%);
    --sml-key-background: hsl(30, 25%, 89%);
    --sml-key-shadow: hsl(28, 16%, 65%);

    /* Text */
    --key-text: hsl(221, 14%, 31%);
    --special-key-text: #fff;
    --theme-sel-text: #fff;
    --output-text: #fff;
    

}

    
/* - Mobile: 375px
    - Desktop: 1440px  */

html, body {
    margin: 0;
    padding: 0;
    background: var(--main-background);

    

}

/* ================= */
/* TYPOGRAPHY */
/* ================= */

body {
    font-family: 'Spartan', sans-serif;
    font-weight: 700;
}

h1,h2,h3,h4 {
    margin: 0;
}


/* ================= */
/* LAYOUT */
/* ================= */


.container-center {
    max-width: 375px;
    min-width: 375px;
    margin: 0 auto;

}

.container-calculator {
    padding: 2em 1.5em;
}

.flex-space-between {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.flex-space-around {
    width: 100%;
    display: flex;
    justify-content: space-around;
}


/* ====================== */
/* THEME SELECTOR
/* ====================== */

.theme-selector {
    color: var(--theme-sel-text);
}

.slider {
    width: 3rem;
}

.theme-row-1 {
    width: 45%;
}

.theme-row-2 {
    width: 45%;
}

.slider-range {
    font-size: .85rem;
    margin-top: 0;
    padding: 0 .5em;
}

.theme-slider {
    background: var(--keypad-background);
    padding: 2px 3px;
    border-radius: 15px;
}

.container-slider-label {
    font-size: .85rem;
    letter-spacing: 1px;
    text-transform: uppercase;
    padding-top: 2em;
    margin-right: 2em;
}

.slider {
    -webkit-appearance: none;  /* Override default CSS styles */
    background: var(--keypad-background);
    outline: none;
    width: 4.25rem;
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.slider::-webkit-slider-thumb {
    -webkit-appearance: none; /* Override default look */
    appearance: none;
    width: 1rem;
    height: 1rem;
    border-radius: 50%;
    background: var(--equals-key-background); /* Green background */
    cursor: pointer; /* Cursor on hover */
  }

/* ====================== */
/* CALCULATOR DISPLAY
/* ====================== */


.container-display {
    padding: 1.75em 0 1.5em 0;
}
.display {
    height: 1em;
    padding: .75em .5em;
    text-align: right;
    font-family: 'Spartan', sans-serif;
    font-size: 32px;
    font-weight: 700;
    color: var(--output-text);
    background: var(--screen-background);
    outline: none;
    border: none;
    border-radius: 8px;
}

/* ====================== */
/* CONTAINER-BTNS
/* ====================== */

.container-btns {
    width: 90%;
    padding: 1em;
    background: var(--keypad-background);
    border-radius: 15px;
}

.btn-row {
    margin-bottom: 1em;
}

.btn {
    text-align: center;
    font-size: 32px;
    font-weight: 700;
    font-family: 'Spartan', sans-serif;
    border: none;
    border-radius: 8px; 
}

.sml-btn {
    width: 22%;
    color: var(--key-text);
    background: var(--sml-key-background);
    box-shadow: inset 0px -3px 5px var(--sml-key-shadow);
}

.num-btn {
    font-size: 28px;
    padding: .5em 0;
}

.blue-btn {
    font-size: 1rem;
    text-transform: uppercase;
    color: var(--special-key-text);
    background: var(--delete-key-background);
    box-shadow: inset 0px -3px 5px var(--delete-key-shadow);
}

.lrg-btn {
    width: 48%;
    font-size: 1rem;
    color: var(--special-key-text);
    text-transform: uppercase;
    padding: 1em 0;
}

.equals-btn {
    background: var(--equals-key-background);
    box-shadow: inset 0px -3px 5px var(--equals-key-shadow);
}

